--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 alembic==1.4.3
 aniso8601==8.1.0
 blinker==1.4
-certifi==2020.12.5
-cffi @ file:///opt/concourse/worker/volumes/live/730e9a28-66f9-4e03-51ad-252ec8e40d81/volume/cffi_1606255126408/work
+certifi
 click==7.1.2
 cryptography==3.2.1
 dnspython==2.1.0
@@ -16,21 +15,17 @@ Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-idna @ file:///tmp/build/80754af9/idna_1609784788857/work
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
-MarkupSafe @ file:///opt/concourse/worker/volumes/live/cb778296-98db-45ad-411e-6f726e102dc3/volume/markupsafe_1594371638608/work
 marshmallow==3.10.0
 marshmallow-sqlalchemy==0.24.1
 passlib==1.7.4
 psycopg2==2.8.6
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 PyJWT==2.0.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.5
-six @ file:///opt/concourse/worker/volumes/live/5b31cb27-1e37-4ca5-6e9f-86246eb206d2/volume/six_1605205320872/work
 SQLAlchemy==1.3.22
 user-blueprint==0.3.0
 Werkzeug==1.0.1
