--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ blinker==1.4
 certifi
 click==7.1.2
 cryptography==3.2.1
-dnspython==2.1.0
+dnspython
 email-validator==1.1.2
 Flask==1.1.2
-Flask-Email==1.4.4
+Flask-Email
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-flask-marshmallow==0.14.0
-Flask-Migrate==2.5.3
-Flask-RESTful==0.3.8
+flask-marshmallow
+Flask-Migrate
+Flask-RESTful
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
@@ -21,12 +21,12 @@ Mako==1.1.3
 marshmallow==3.10.0
 marshmallow-sqlalchemy==0.24.1
 passlib==1.7.4
-psycopg2==2.8.6
-PyJWT==2.0.0
+psycopg2
+PyJWT
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.5
-SQLAlchemy==1.3.22
+SQLAlchemy
 user-blueprint==0.3.0
 Werkzeug==1.0.1
 WTForms==2.3.3
